gitops/manifests/security/allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-dns
  namespace: springboot

spec:

  podSelector:
    matchLabels:
      app: springboot

  policyTypes:
    - Egress

  egress:

    - to:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

      ports:

        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
