gitops/manifests/security/allow-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-prometheus
  namespace: springboot

spec:

  podSelector:
    matchLabels:
      app: springboot

  policyTypes:
    - Ingress

  ingress:

    - from:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring

      ports:

        - protocol: TCP
          port: 8080
