gitops/manifests/security/ingress-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-alb-ingress
  namespace: springboot

spec:

  podSelector:
    matchLabels:
      app: springboot

  policyTypes:
    - Ingress

  ingress:

    - from:

        - namespaceSelector: {}

      ports:

        - protocol: TCP
          port: 8080
